app-code/whisparr/whisparr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisparr
  namespace: media
  labels:
    app: whisparr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: whisparr
  template:
    metadata:
      labels:
        app: whisparr
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
        options:
          - name: ndots
            value: "1"

      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined

      containers:
        - name: whisparr
          image: ghcr.io/hotio/whisparr:latest
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 6969
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            # THE FIX: Mounts the isolated audio_pool directly to /data
            - name: audio-pool
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: whisparr-config-pvc
        - name: audio-pool
          hostPath:
            path: /mnt/audio_pool
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: whisparr-svc
  namespace: media
spec:
  selector:
    app: whisparr
  type: NodePort
  ports:
    - name: http
      port: 6969
      targetPort: 6969
      nodePort: 30469
