app-code/whisparr/whisparr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisparr-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`whisparr.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: media}]
      services: [{name: whisparr-svc, port: 6969}]
